update order and table, websocket communication